# vLLM-Kunlun

./: pyproject.toml  requirements.txt  setup.py
vllm_kunlun/: __init__.py
vllm_kunlun/compilation/: wrapper.py
vllm_kunlun/entrypoints/openai/: serving_chat.py
vllm_kunlun/entrypoints/openai/tool_parsers/: gemma4_tool_parser.py
vllm_kunlun/models/: deepseek_v2.py  gemma4_mm.py  internvl.py  qwen2_vl.py  qwen3_5.py  qwen3_next.py
vllm_kunlun/ops/: __init__.py  _kunlun_ops.py  activation.py  vocab_parallel_embedding.py
vllm_kunlun/ops/attention/: layer.py
vllm_kunlun/ops/fla/: chunk.py  fused_recurrent.py  utils.py
vllm_kunlun/ops/fused_moe/: layer.py
vllm_kunlun/ops/mamba/: causal_conv1d.py
vllm_kunlun/quantization/compressed_tensors/: compressed_tensors.py  compressed_tensors_moe.py
vllm_kunlun/quantization/kernels/: __init__.py  exllama.py  scale_mm.py
vllm_kunlun/reasoning/: __init__.py  minimax_m2_reasoning_parser.py
vllm_kunlun/v1/attention/backends/: gdn_attn.py  kunlun_attn.py
vllm_kunlun/v1/sample/ops/: logprobs.py  topk_topp_sampler.py
vllm_kunlun/v1/structured_output/: utils.py
vllm_kunlun/v1/worker/: block_table.py  utils.py
