[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "vllm-kunlun"
version = "0.21.0.dev0"
description = "vLLM Kunlun3 backend plugin"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kunlun"}]
dependencies = []

[project.scripts]
vllm-kunlun = "vllm_kunlun.cmdline:main"

[project.entry-points."vllm.platform_plugins"]
kunlun = "vllm_kunlun:register"

[project.entry-points."vllm.general_plugins"]
kunlun_model = "vllm_kunlun:register_model"
kunlun_reasoning_parser = "vllm_kunlun:register_reasoning_parser"
kunlun_tool_parser = "vllm_kunlun:register_tool_parser"

[tool.hatch.build]
packages = ["vllm_kunlun"]
include = ["vllm_kunlun/conf/*", "vllm_kunlun/data/*"]

[tool.hatch.build.targets.wheel]
packages = ["vllm_kunlun"]
output-dir = "output/dist"
